Added projects page

--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
     <a href="" class="logo"><img src="images/logo.png" /></a>
     <div id="menu-bar" class="fas fa-bars"></div>
     <nav class="navbar">
-      <a href="#home">Home</a>
-      <a href="#aboutus">About Us</a>
-      <a href="#projects">Projects</a>
+      <a href="index.html">Home</a>
+      <a href="aboutus.html">About Us</a>
+      <a href="projects.html">Projects</a>
       <a href="#contact">Contact Us</a>
      <button>Donate</button></a>
      
     </nav>
   </header>
   <!--header ends-->
-    <div class="content">
+    <div class="welcome-section-content">
 		<h4> Together we can,</h4>
 		<h1>Empower Women and Girls with Sustainable Menstrual Solutions & Entrepreneurship</h1>
 	</div>
-	<div class="strip">
+	<div class="welcome-section-strip">
         <div class="mission">
-               <a href="#aboutus"><h2>Our mission</h2></a> 
+               <a href="aboutus.html"><h2>Our mission</h2></a> 
                 <h4>Our Goal, Vision & Commitment</h4>
          </div>
          <div class="projects">
-            <a href="#projects"><h2>Our projects</h2></a> 
+            <a href="projects.html"><h2>Our projects</h2></a> 
              <h4>What we do to help make change </h4>
          </div>
           <div class="volunteer">
@@ -48,10 +48,10 @@
 <!--Success section starts-->
 
 <section class="sucess-stories" id="sucess-stories">
-	<div class="box-container-2">
-		<div class="box-1">
-		<h1 class="heading"> Our <span>Impact</span></h1>
-		  <div class="content-2">
+	<div class="sucess-stories-container">
+		<div class="container-left">
+		<h1 class="container-left-heading"> Our <span>Impact</span></h1>
+		  <div class=" container-left-content">
         <h2> Through our programs, we have been able to positively impact the lives of countless women and girls.</h4>
 	    <p> Many women and girls have been empowered through our sustainable menstrual solutions, entrepreneurship training, and reproductive education programs. 
         Explore our success stories page to discover the inspiring journeys of these individuals and learn more about our ongoing efforts 
@@ -60,59 +60,58 @@
       <button class="donate-btn">READ ME</button>
 	   </div>
 
-		<div class="box-2">
-			<img class="image" src="images/impact.jpg">
+		<div class="container-right">
+			<img class="container-right-image" src="images/impact.jpg">
 	    </div>
 </section>
 <!--Success section ends-->
 <!--Impact section starts-->
-
 <section class="impact" id="impact">
-	<div class="box-container">
-		<div class="content-3">
+	<div class="impact-box-container">
+		<div class="impact-content-left">
         <h1> Our numbers that speak</h1>
 	    <p> We have numbers that push us to give in our best and make sure that we break our own records.
          We are happy to be growing and helping more day by day </p>
 		</div>
 
-       <div class="numbers">
-        <div class="row">
-          <div class="col">
-            <h2><span class="count">2231</span></h2>
+       <div class="impact-right-numbers">
+        <div class="impact-right-row">
+          <div class="impact-right-col">
+            <h2><span class="impact-count">2231</span></h2>
             <p>Girls taught to make reusable pads</p>
             <hr>
           </div>
-          <div class="col">
-            <h2><span class="count">11155</span></h2>
+          <div class="impact-right-col">
+            <h2><span class="impact-count">11155</span></h2>
             <p>Reusable pads made in Mawimbi workshops</p>
             <hr>
           </div>
-          <div class="col">
-            <h2><span class="count">132</span></h2>
+          <div class="impact-right-col">
+            <h2><span class="impact-count">132</span></h2>
             <p>Sessions conducted on Sexual Reproductive Health Rights</p>
             <hr>
           </div>
         </div>
-        <div class="row">
-          <div class="col">
-            <h2><span class="count">20</span></h2>
+        <div class="impact-right-row">
+          <div class="impact-right-col">
+            <h2><span class="impact-count">20</span></h2>
             <p>Girls trained on entrepreneurship and digital skills through Imarika project</p>
             <hr>
           </div>
-          <div class="col">
-            <h2><span class="count">19</span></h2>
+          <div class="impact-right-col">
+            <h2><span class="impact-count">19</span></h2>
             <p>Schools reached in Tanzania</p>
             <hr>
           </div>
-          <div class="col">
-            <h2><span class="count">5</span></h2>
+          <div class="impact-right-col">
+            <h2><span class="impact-count">5</span></h2>
             <p>Villages reached</p>
             <hr>
           </div>
         </div>
-        <div class="row">
-          <div class="col">
-            <h2 class="center"><span class="count">27</span></h2>
+        <div class="impact-right-row">
+          <div class="impact-right-col">
+            <h2 class="center"><span class="impact-count">27</span></h2>
             <p class="center">Interns and volunteers engaged in our programs</p>
             <hr>
           </div>
@@ -136,9 +135,7 @@
     <h1>Support us and empower a girl's and woman's life today!</h1>
     <button class="donate-btn">DONATE</button>
  </section>
-  
-
-<!--donate section ends here-->
+  <!--donate section ends here-->
 
 <!--footer starts here-->
      <footer>
@@ -152,7 +149,7 @@
         </div>
         <div class="footer-col">
           <h3>Contact Us</h3>
-          <p>NewYork, NewYork USA. <br>+255718888345 <br>contact@info.com</p>
+          <p>NewYork, NewYork USA. <br>+255746564725 <br>contact@info.com</p>
           <div class="social-icons">
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -163,8 +160,8 @@
         <div class="footer-col">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="#aboutus">About Us</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="projects.html">Projects</a></li>
             <li><a href="#contact">Contact Us</a></li>
           </ul>
         </div>
