--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <a href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
       <a href="projects.html">Projects</a>
-      <a href="#contact">Contact Us</a>
-     <button>Donate</button></a>
+      <a href="contact.html">Contact Us</a>
+      <a href="donate.html"><button>Donate</button></a></a> 
      
     </nav>
   </header>
@@ -38,7 +38,7 @@
              <h4>What we do to help make change </h4>
          </div>
           <div class="volunteer">
-        <a href="#donate"><h2>Get involved</h2></a> 
+        <a href="donate.html"><h2>Get involved</h2></a> 
          <h4>Volunteer, Participate, or Donate</h4>
         </div>
      </div>
@@ -57,7 +57,7 @@
         Explore our success stories page to discover the inspiring journeys of these individuals and learn more about our ongoing efforts 
     to create positive change in our community. </p>
       </div>
-      <button class="donate-btn">READ ME</button>
+      <a href="sucess.html"><button class="donate-btn">READ ME</button></a> 
 	   </div>
 
 		<div class="container-right">
@@ -133,45 +133,48 @@
 <section class="donate">
     <h4>GIVE US A HAND</h4>
     <h1>Support us and empower a girl's and woman's life today!</h1>
-    <button class="donate-btn">DONATE</button>
+    <a href="donate.html"><button class="donate-btn">DONATE</button></a> 
  </section>
   <!--donate section ends here-->
 
-<!--footer starts here-->
-     <footer>
-        <div class="footer-col">
-          <h3>Stay up to date</h3>
-          <form>
-            <input type="email" placeholder="Email Address" >
-            <br/>
-            <button type="submit" class="submit" >Submit</button>
-          </form>
-        </div>
-        <div class="footer-col">
-          <h3>Contact Us</h3>
-          <p>NewYork, NewYork USA. <br>+255746564725 <br>contact@info.com</p>
-          <div class="social-icons">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-          </div>
-        </div>
-        <div class="footer-col">
-          <h3>Quick Links</h3>
-          <ul>
-            <li><a href="aboutus.html">About Us</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="#contact">Contact Us</a></li>
-          </ul>
-        </div>
-      </footer>
-      <div class="copy">
-        <hr>
-        <p>&copy; 2023 Msichana Imara Foundation | Created by Alice-K</p>
-      </div>
-      
-      <!--footer ends here-->
+<!--footer section starts--> 
+<footer>
+  <div class="footer-col">
+    <h3>Stay up to date</h3>
+    <form>
+      <input type="email" placeholder="Email Address" >
+      <br/>
+      <button type="submit" class="submit" >Submit</button>
+    </form>
+  </div>
+  <div class="footer-col">
+    <h3>Contact Us</h3>
+    <ul>
+      <li><i class="fa fa-map-marker"></i>Shamsi,Sakina Seondary Road.Arusha</li>
+      <li><i class="fa fa-phone"></i> +255 718 888 345</li>
+      <li><i class="fa fa-envelope"></i> msichanaimarafoundation@gmail.com</li>
+  </ul>
+    <div class="social-icons">
+      <a href=" https://www.instagram.com/msichanaimara/"><i class="fab fa-instagram"></i></a>
+      <a href=" https://web.facebook.com/profile.php?id=100086774670458 "><i class="fab fa-facebook"></i></a>
+      <a href="https://www.youtube.com/channel/UCwqgY1ThkXRdyjZTZWjVm1w"><i class="fab fa-youtube"></i></a>
+    </div>
+  </div>
+  <div class="footer-col">
+    <h3>Quick Links</h3>
+    <ul>
+      <li><a href="aboutus.html">About Us</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
+    </ul>
+  </div>
+</footer>
+<div class="copy">
+  <hr>
+  <p>&copy; 2023 Msichana Imara Foundation | Created by Alice-K</p>
+</div>
+
+<!--footer ends here-->
 
 <!--scroll top button-->
 <a href="#home" class="fas fa-angle-up" id="scroll-top"></a>
