Finished the project

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <a href="" class="logo"><img src="images/logo.png" /></a>
     <div id="menu-bar" class="fas fa-bars"></div>
     <nav class="navbar">
-      <a href="index.html">Home</a>
+       <a href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
       <a href="projects.html">Projects</a>
       <a href="contact.html">Contact Us</a>
+      <a href="ourteam.html">Our Team</a>
       <a href="donate.html"><button>Donate</button></a></a> 
      
     </nav>
@@ -151,7 +152,7 @@
     <h3>Contact Us</h3>
     <ul>
       <li><i class="fa fa-map-marker"></i>Shamsi,Sakina Seondary Road.Arusha</li>
-      <li><i class="fa fa-phone"></i> +255 718 888 345</li>
+      <li><i class="fa fa-phone"></i>+255 746 564 725</li>
       <li><i class="fa fa-envelope"></i> msichanaimarafoundation@gmail.com</li>
   </ul>
     <div class="social-icons">
@@ -175,11 +176,6 @@
 </div>
 
 <!--footer ends here-->
-
-<!--scroll top button-->
-<a href="#home" class="fas fa-angle-up" id="scroll-top"></a>
-
-
 <!--custom js file link-->
 <script src="script.js"></script>
 
