Made changes logo.png

--- a/donate.html
+++ b/donate.html
@@ -18,7 +18,7 @@
   <section class="welcome-to-projects" id="welcome">
     <!--header starts-->
     <header>
-      <a href="" class="logo"><img src="images/logo.png" /></a>
+      <a href="" class="logo"><img src="images/Logo.png" /></a>
       <div id="menu-bar" class="fas fa-bars"></div>
       <nav class="navbar">
         <a href="index.html">Home</a>
