made changes kwenye picha

--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
             <div class="row">
                 <img src="images/mawimbi4.jpeg" class="carousel-item">
                 <img src="images/mawimbi3.jpg" class="carousel-item">
-                <img src="images/mawimbi5.jpg" class="carousel-item">
+                <img src="images/mawimbi5.JPG" class="carousel-item">
              
             </div>
             </div>
