Changed from Msichana Imara to Mawimbi projects

--- a/ourteam.html
+++ b/ourteam.html
@@ -132,7 +132,7 @@
                         <img src="images/team3.jpg" alt="">
                     </div>
                     <h1 class="name">Valentine Nyssen</h1>
-                    <h2 class="title">Founder and Program coordinator of Mischana Imara</h2>
+                    <h2 class="title">Founder and Program coordinator of Mawimbi Projects</h2>
 
                 </div>
                 <div class="board-members">
