Made changes kwenye form-submit

--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,7 @@
                 <a href=" https://www.instagram.com/msichanaimara/"><i class="fab fa-instagram"></i></a>
                 <a href=" https://web.facebook.com/profile.php?id=100086774670458 "><i class="fab fa-facebook"></i></a>
                 <a href="https://www.youtube.com/channel/UCwqgY1ThkXRdyjZTZWjVm1w"><i class="fab fa-youtube"></i></a>
+                <a href=" https://twitter.com/msichanaimara "><i class="fab fa-twitter"></i></a>
               </div>
             </div>
             <div class="footer-col">
