--- a/index.html
+++ b/index.html
@@ -1,81 +1,93 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<title> Msichana Imara</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<link rel="stylesheet" type="text/css" href="style.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title> Msichana Imara</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
- <body>
-<!--welcome section starts-->
-<section class="welcome" id="welcome">
+
+<body>
+  <!--welcome section starts-->
+  <section class="welcome" id="welcome">
     <!--header starts-->
-<header>
-    <a href="" class="logo"><img src="images/Logo.png" /></a>
-    <div id="menu-bar" class="fas fa-bars"></div>
-    <nav class="navbar">
-       <a href="index.html">Home</a>
-      <a href="aboutus.html">About Us</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact Us</a>
-      <a href="ourteam.html">Our Team</a>
-      <a href="donate.html"><button>Donate</button></a></a> 
-     
-    </nav>
-  </header>
-  <!--header ends-->
+    <header>
+      <a href="" class="logo"><img src="images/Logo.png" /></a>
+      <div id="menu-bar" class="fas fa-bars"></div>
+      <nav class="navbar">
+        <a href="index.html">Home</a>
+        <a href="aboutus.html">About Us</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact Us</a>
+        <a href="ourteam.html">Our Team</a>
+        <a href="donate.html"><button>Donate</button></a></a>
+
+      </nav>
+    </header>
+    <!--header ends-->
     <div class="welcome-section-content">
-		<h4> Together we can,</h4>
-		<h1>Empower Women and Girls with Sustainable Menstrual Solutions & Entrepreneurship</h1>
-	</div>
-	<div class="welcome-section-strip">
-        <div class="mission">
-               <a href="aboutus.html"><h2>Our mission</h2></a> 
-                <h4>Our Goal, Vision & Commitment</h4>
-         </div>
-         <div class="projects">
-            <a href="projects.html"><h2>Our projects</h2></a> 
-             <h4>What we do to help make change </h4>
-         </div>
-          <div class="volunteer">
-        <a href="donate.html"><h2>Get involved</h2></a> 
-         <h4>Volunteer, Participate, or Donate</h4>
-        </div>
-     </div>
-</section>
-<!--welcome section ends-->
-
-<!--Success section starts-->
-
-<section class="sucess-stories" id="sucess-stories">
-	<div class="sucess-stories-container">
-		<div class="container-left">
-		<h1 class="container-left-heading"> Our <span>Impact</span></h1>
-		  <div class=" container-left-content">
-        <h2> Through our programs, we have been able to positively impact the lives of countless women and girls.</h4>
-	    <p> Many women and girls have been empowered through our sustainable menstrual solutions, entrepreneurship training, and reproductive education programs. 
-        Explore our success stories page to discover the inspiring journeys of these individuals and learn more about our ongoing efforts 
-    to create positive change in our community. </p>
+      <h4> Together we can,</h4>
+      <h1>Empower Women and Girls with Sustainable Menstrual Solutions & Entrepreneurship Skills.</h1>
+    </div>
+    <div class="welcome-section-strip">
+      <div class="mission">
+        <a href="aboutus.html">
+          <h2>Our mission</h2>
+        </a>
+        <h4>Our Goal, Vision & Commitment</h4>
       </div>
-      <a href="sucess.html"><button class="donate-btn">READ ME</button></a> 
-	   </div>
+      <div class="projects">
+        <a href="projects.html">
+          <h2>Our projects</h2>
+        </a>
+        <h4>What we do to help make change </h4>
+      </div>
+      <div class="volunteer">
+        <a href="donate.html">
+          <h2>Get involved</h2>
+        </a>
+        <h4>Volunteer, Participate, or Donate</h4>
+      </div>
+    </div>
+  </section>
+  <!--welcome section ends-->
 
-		<div class="container-right">
-			<img class="container-right-image" src="images/impact.jpg">
-	    </div>
-</section>
-<!--Success section ends-->
-<!--Impact section starts-->
-<section class="impact" id="impact">
-	<div class="impact-box-container">
-		<div class="impact-content-left">
+  <!--Success section starts-->
+
+  <section class="sucess-stories" id="sucess-stories">
+    <div class="sucess-stories-container">
+      <div class="container-left">
+        <h1 class="container-left-heading"> Our <span>Impact</span></h1>
+        <div class=" container-left-content">
+          <h2> Through our programs, we have been able to positively impact the lives of countless women and girls.</h4>
+            <p> Many women and girls have been empowered through our sustainable menstrual solutions, entrepreneurship
+              training, and reproductive education programs.
+              Explore our success stories page to discover the inspiring journeys of these individuals and learn more
+              about our ongoing efforts
+              to create positive change in our community. </p>
+        </div>
+        <a href="sucess.html"><button class="donate-btn">READ ME</button></a>
+      </div>
+
+      <div class="container-right">
+        <img class="container-right-image" src="images/impact.jpg">
+      </div>
+  </section>
+  <!--Success section ends-->
+  <!--Impact section starts-->
+  <section class="impact" id="impact">
+    <div class="impact-box-container">
+      <div class="impact-content-left">
         <h1> Our numbers that speak</h1>
-	    <p> We have numbers that push us to give in our best and make sure that we break our own records.
-         We are happy to be growing and helping more day by day </p>
-		</div>
+        <p> We have numbers that push us to give in our best and make sure that we break our own records.
+          We are happy to be growing and helping more day by day </p>
+      </div>
 
-       <div class="impact-right-numbers">
+      <div class="impact-right-numbers">
         <div class="impact-right-row">
           <div class="impact-right-col">
             <h2><span class="impact-count">2231</span></h2>
@@ -118,67 +130,69 @@
           </div>
         </div>
       </div>
-</section>
-<!--Impact section ends-->
-<!--Image section starts-->
-<section class="images">
-	<div class="image-section">
-        <img src="images/image1.jpg" alt="Image 1" class="img-responsive">
-        <img src="images/image2.jpg" alt="Image 2" class="img-responsive">
-        <img src="images/image3.JPG" alt="Image 3" class="img-responsive">
-      </div>
-</section>
-<!--Image section ends-->
+  </section>
+  <!--Impact section ends-->
+  <!--Image section starts-->
+  <section class="images">
+    <div class="image-section">
+      <img src="images/image1.jpg" alt="Image 1" class="img-responsive">
+      <img src="images/image2.jpg" alt="Image 2" class="img-responsive">
+      <img src="images/image3.JPG" alt="Image 3" class="img-responsive">
+    </div>
+  </section>
+  <!--Image section ends-->
 
-<!--donate section starts here-->
-<section class="donate">
+  <!--donate section starts here-->
+  <section class="donate">
     <h4>GIVE US A HAND</h4>
     <h1>Support us and empower a girl's and woman's life today!</h1>
-    <a href="donate.html"><button class="donate-btn">DONATE</button></a> 
- </section>
+    <a href="donate.html"><button class="donate-btn">DONATE</button></a>
+  </section>
   <!--donate section ends here-->
 
-<!--footer section starts--> 
-<footer>
-  <div class="footer-col">
-    <h3>Stay up to date</h3>
-    <form>
-      <input type="email" placeholder="Email Address" >
-      <br/>
-      <button type="submit" class="submit" >Submit</button>
-    </form>
-  </div>
-  <div class="footer-col">
-    <h3>Contact Us</h3>
-    <ul>
-      <li><i class="fa fa-map-marker"></i>Shamsi,Sakina Seondary Road.Arusha</li>
-      <li><i class="fa fa-phone"></i>+255 746 564 725</li>
-      <li><i class="fa fa-envelope"></i> msichanaimarafoundation@gmail.com</li>
-  </ul>
-    <div class="social-icons">
-      <a href=" https://www.instagram.com/msichanaimara/"><i class="fab fa-instagram"></i></a>
-      <a href=" https://web.facebook.com/profile.php?id=100086774670458 "><i class="fab fa-facebook"></i></a>
-      <a href="https://www.youtube.com/channel/UCwqgY1ThkXRdyjZTZWjVm1w"><i class="fab fa-youtube"></i></a>
+  <!--footer section starts-->
+  <footer>
+    <div class="footer-col">
+      <h3>Stay up to date</h3>
+      <form action="https://formsubmit.co/27841d8d0615c27e84fef6b945fd3ad4" method="post">
+        <input name="email" type="email" placeholder="Email Address">
+        <br />
+        <button type="submit" class="submit">Submit</button>
+      </form>
     </div>
+    <div class="footer-col">
+      <h3>Contact Us</h3>
+      <ul>
+        <li><i class="fa fa-map-marker"></i>Shamsi,Sakina Seondary Road.Arusha</li>
+        <li><i class="fa fa-phone"></i>+255 746 564 725</li>
+        <li><i class="fa fa-envelope"></i> msichanaimarafoundation@gmail.com</li>
+      </ul>
+      <div class="social-icons">
+        <a href=" https://www.instagram.com/msichanaimara/"><i class="fab fa-instagram"></i></a>
+        <a href=" https://web.facebook.com/profile.php?id=100086774670458 "><i class="fab fa-facebook"></i></a>
+        <a href="https://www.youtube.com/channel/UCwqgY1ThkXRdyjZTZWjVm1w"><i class="fab fa-youtube"></i></a>
+        <a href=" https://twitter.com/msichanaimara "><i class="fab fa-twitter"></i></a>
+      </div>
+    </div>
+    <div class="footer-col">
+      <h3>Quick Links</h3>
+      <ul>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+    </div>
+  </footer>
+  <div class="copy">
+    <hr>
+    <p>&copy; 2023 Msichana Imara Foundation | Created by Alice-K</p>
   </div>
-  <div class="footer-col">
-    <h3>Quick Links</h3>
-    <ul>
-      <li><a href="aboutus.html">About Us</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="contact.html">Contact Us</a></li>
-    </ul>
-  </div>
-</footer>
-<div class="copy">
-  <hr>
-  <p>&copy; 2023 Msichana Imara Foundation | Created by Alice-K</p>
-</div>
 
-<!--footer ends here-->
-<!--custom js file link-->
-<script src="script.js"></script>
+  <!--footer ends here-->
+  <!--custom js file link-->
+  <script src="script.js"></script>
 
 
 </body>
+
 </html>
