--- a/sucess.html
+++ b/sucess.html
@@ -97,13 +97,14 @@
       <h3>Contact Us</h3>
       <ul>
         <li><i class="fa fa-map-marker"></i>Shamsi,Sakina Seondary Road.Arusha</li>
-        <li><i class="fa fa-phone"></i> +255 718 888 345</li>
+        <li><i class="fa fa-phone"></i> +255 746 564 725</li>
         <li><i class="fa fa-envelope"></i> msichanaimarafoundation@gmail.com</li>
     </ul>
       <div class="social-icons">
         <a href=" https://www.instagram.com/msichanaimara/"><i class="fab fa-instagram"></i></a>
         <a href=" https://web.facebook.com/profile.php?id=100086774670458 "><i class="fab fa-facebook"></i></a>
         <a href="https://www.youtube.com/channel/UCwqgY1ThkXRdyjZTZWjVm1w"><i class="fab fa-youtube"></i></a>
+        <a href=" https://twitter.com/msichanaimara "><i class="fab fa-twitter"></i></a>
       </div>
     </div>
     <div class="footer-col">
