--- a/ourteam.html
+++ b/ourteam.html
@@ -132,7 +132,7 @@
                         <img src="images/team3.jpg" alt="">
                     </div>
                     <h1 class="name">Valentine Nyssen</h1>
-                    <h2 class="title">Founder and Program coordinator of Mawimbi Projects</h2>
+                    <h2 class="title">Founder and Program coordinator of Mawimbi Project.</h2>
 
                 </div>
                 <div class="board-members">
@@ -213,6 +213,7 @@
                 <a href=" https://www.instagram.com/msichanaimara/"><i class="fab fa-instagram"></i></a>
                 <a href=" https://web.facebook.com/profile.php?id=100086774670458 "><i class="fab fa-facebook"></i></a>
                 <a href="https://www.youtube.com/channel/UCwqgY1ThkXRdyjZTZWjVm1w"><i class="fab fa-youtube"></i></a>
+                <a href=" https://twitter.com/msichanaimara "><i class="fab fa-twitter"></i></a>
             </div>
         </div>
         <div class="footer-col">
